--- a/nosotros.html
+++ b/nosotros.html
@@ -34,7 +34,7 @@
   
       <ul class="nav nav-tabs">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">inicio</a>
+            <a class="nav-link active" aria-current="page" href="index.html">inicio</a>
           </li>
   
           
