--- a/contacto.html
+++ b/contacto.html
@@ -59,7 +59,7 @@
               <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">tatuajes</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="reservas.html">reservas de tatuajes </a></li>
-                <li><a class="dropdown-item" href="#">tipos de tatuajes</a></li>
+                <li><a class="dropdown-item" href="tiposdetatuajes.html">tipos de tatuajes</a></li>
                 <li><a class="dropdown-item" href="#"></a>tipos de pagos</li>
                 <li><a class="dropdown-item" href="#">asesorias</a></li>
                 <li><a class="dropdown-item" href="#">seguimientos y procesos</a></li>
