--- a/tiposdetatuajes.html
+++ b/tiposdetatuajes.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,28 +26,28 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/imagenes/papel-tapiz-peluquero-fondo-marmol-negro_53876-145654.avif" class="d-block w-100" alt="...">
+      <img src="/imagenes/f4.avif" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>First slide label</h5>
         <p>te invitamos que seas gr</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/imagenes/f14.avif" class="d-block w-100" alt="...">
+      <img src="/imagenes/f1.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Second slide label</h5>
         <p>Some representative placeholder content for the second slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/imagenes/f7.avif" class="d-block w-100" alt="...">
+      <img src="/imagenes/f2.avif" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/imagenes/f13.avif" class="d-block w-100" alt="...">
+      <img src="/imagenes/f3.avif" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
@@ -148,7 +146,7 @@
     <h2 class="titulo">Novedades</h2>
     <div class="col">
       <div class="card h-50">
-        <img src="/imagenes/tipos de cortes.jpg" class="card-img-top" alt="...">
+        <img src="/imagenes/tipos de tau.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Tipos cortes</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -161,7 +159,7 @@
     </div>
     <div class="col">
       <div class="card h-50">
-        <img src="/imagenes/tipos de cortes4.jpg" class="card-img-top" alt="...">
+        <img src="/imagenes/tipo de tattu3.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">grandes ideas de diseños</h5>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -173,7 +171,7 @@
     </div>
     <div class="col">
       <div class="card h-50">
-        <img src="/imagenes/tipos de cortr.jpg" class="card-img-top" alt="...">
+        <img src="/imagenes/tipo de tattu2.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">accesoria personal </h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
