--- a/tiposdepagos.html
+++ b/tiposdepagos.html
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/imagenes/fondo3.jpg" class="d-block w-100" alt="...">
+        <img src="/imagenes/" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Second slide label</h5>
           <p>Some representative placeholder content for the second slide.</p>
@@ -112,7 +112,7 @@
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">tatuajes</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="reservas.html">reservas de tatuajes </a></li>
-                  <li><a class="dropdown-item" href="#">tipos de tatuajes</a></li>
+                  <li><a class="dropdown-item" href="tiposdetatuajes.html">tipos de tatuajes</a></li>
                   <li><a class="dropdown-item" href="#"></a>tipos de pagos</li>
                   <li><a class="dropdown-item" href="#">asesorias</a></li>
                   <li><a class="dropdown-item" href="#">seguimientos y procesos</a></li>
