--- a/tiposdepagost.html
+++ b/tiposdepagost.html
@@ -112,7 +112,7 @@
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="reservas.html">reservas de tatuajes </a></li>
                   <li><a class="dropdown-item" href="tiposdetatuajes.html">tipos de tatuajes</a></li>
-                  <li><a class="dropdown-item" href="#"></a>tipos de pagos</li>
+                  <li><a class="dropdown-item" href="tiposdepagost.html ajuste"></a>tipos de pagos</li>
                   <li><a class="dropdown-item" href="#">asesorias</a></li>
                   <li><a class="dropdown-item" href="#">seguimientos y procesos</a></li>
                 </ul>
@@ -143,8 +143,8 @@
                   </div>
               </nav>
 <!-- sección novedades -->
-<div class="row row-cols-1 row-cols-md-3 g-4 p-5" id="tipos de  cortes">
-    <h2 class="titulo">tipos de cortes</h2>
+<div class="row row-cols-1 row-cols-md-3 g-4 p-5" id="novedades">
+    <h2 class="titulo">Novedades</h2>
     <div class="col">
       <div class="card h-50">
         <img src="/imagenes/tipos de cortes.jpg" class="card-img-top ajuste" alt="...">
