--- a/tiposdetatuajes.html
+++ b/tiposdetatuajes.html
@@ -111,7 +111,7 @@
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="reservas.html">reservas de tatuajes </a></li>
                   <li><a class="dropdown-item" href="tiposdetatuajes.html">tipos de tatuajes</a></li>
-                  <li><a class="dropdown-item" href="#"></a>tipos de pagos</li>
+                  <li><a class="dropdown-item" href="tiposdepagos.html"></a>tipos de pagos</li>
                   <li><a class="dropdown-item" href="#">asesorias</a></li>
                   <li><a class="dropdown-item" href="#">seguimientos y procesos</a></li>
                 </ul>
