--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="reservas.html">reservas de tatuajes </a></li>
               <li><a class="dropdown-item" href="tiposdetatuajes.html">tipos de tatuajes</a></li>
-              <li><a class="dropdown-item" href="#"></a>tipos de pagos</li>
+              <li><a class="dropdown-item" href="tiposdepagost.html"></a>tipos de pagos</li>
               <li><a class="dropdown-item" href="#">asesorias</a></li>
               <li><a class="dropdown-item" href="#">seguimientos y procesos</a></li>
             </ul>
@@ -101,27 +101,26 @@
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button> 
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button> 
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+   
     
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/imagenes/descarga (5).jpg" class="d-block w-100" alt="...">
+      <img src="/imagenes/f15.avif" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>First slide label</h5>
         <p>te invitamos que seas gr</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/imagenes/descarga (6).jpg" class="d-block w-100" alt="...">
+      <img src="/imagenes/f16.avif" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Second slide label</h5>
         <p>Some representative placeholder content for the second slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/imagenes/fondoo2.jpg" class="d-block w-100" alt="...">
+      <img src="/imagenes/f17.avif" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
@@ -145,128 +144,6 @@
   </button>
 </div>
 
-
-<!-- sección novedades -->
-<div class="row row-cols-1 row-cols-md-3 g-4 p-5" id="novedades">
-  <h2 class="titulo">Novedades</h2>
-  <div class="col">
-    <div class="card h-50">
-      <img src="/imagenes/fondootat.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">tatuajes a tu estilo</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-
-      </div>
-      <div class="card-footer">
-        <small class="text-body-secondary"> </small>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-50">
-      <img src="/imagenes/fondo tatu.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">grandes ideas de diseños</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-body-secondary"></small>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-50">
-      <img src="/imagenes/fondo barbero.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">accesoria personal </h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-body-secondary"></small>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- sección novedades -->
-<div class="row row-cols-1 row-cols-md-3 g-4 p-5" id="tipos de cortes">
-  <h2 class="titulo">domicilios</h2>
-  <div class="col">
-    <div class="card h-50">
-      <img src="/imagenes/fondootat.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">tatuajes a tu estilo</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-
-      </div>
-      <div class="card-footer">
-        <small class="text-body-secondary"> </small>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-50">
-      <img src="/imagenes/fondo tatu.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">grandes ideas de diseños</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-body-secondary"></small>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-50">
-      <img src="/imagenes/fondo barbero.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">accesoria personal </h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-body-secondary"></small>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="col">
-  <div class="card h-50">
-    <img src="/imagenes/fondo3.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">accesoria personal </h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-body-secondary"></small>
-    </div>
-  </div>
-</div>
-</div>  <div class="col">
-  <div class="card h-50">
-    <img src="/imagenes/images.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">accesoria personal </h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-body-secondary"></small>
-    </div>
-  </div>
-</div>
-</div>  <div class="col">
-  <div class="card h-50">
-    <img src="/imagenes/images (7).jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">accesoria personal </h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-body-secondary"></small>
-    </div>
-  </div>
-</div>
-</div>
 
  
 
