--- a/tiposdepagos.html
+++ b/tiposdepagos.html
@@ -22,8 +22,7 @@
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button> 
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button> 
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+      
       
     </div>
     <div class="carousel-inner">
@@ -149,7 +148,7 @@
     <h2 class="titulo">tipos de pagos</h2>
     <div class="col">
       <div class="card h-50">
-        <img src="/imagenes/fondootat.jpg" class="card-img-top" alt="...">
+        <img src="/imagenes/fondootat.jpg" class="card-img-top  ajuste" alt="...">
         <div class="card-body">
           <h5 class="card-title">pagos a credito</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -162,7 +161,7 @@
     </div>
     <div class="col">
       <div class="card h-50">
-        <img src="/imagenes/fondo tatu.jpg" class="card-img-top" alt="...">
+        <img src="/imagenes/fondo tatu.jpg" class="card-img-top ajuste" alt="...">
         <div class="card-body">
           <h5 class="card-title">pagos en linea</h5>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -174,7 +173,7 @@
     </div>
     <div class="col">
       <div class="card h-50">
-        <img src="/imagenes/fondo barbero.jpg" class="card-img-top" alt="...">
+        <img src="/imagenes/fondo barbero.jpg" class="card-img-top ajuste" alt="...">
         <div class="card-body">
           <h5 class="card-title">pagos a credito </h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
